--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-#log4j.rootLogger=info,console,R
+#log4j.rootLogger=debug,info,console,R
 #log4j.logger.com.palmcity.rtti.ic.fusion.log.TestLog=info,console,R
 log4j.logger.com.caits.lbs.framework.log.CommonLogFactory=info,console,R
 log4j.logger.errordatafile=error,errordatafile
