--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -9,21 +9,25 @@ scan_interval=20000
 error_valve=3
 MODULETYPE_RECEIVE=Receive
 
-
+JSURL=src\\main\\java\\com\\palmcity\\rtti\\maintenancemonitor\\service\\test.js
 
 ##groovy file path
 GROOVY_FILEPATH=src/main/resources/groovy
-PUBLISHDATA_FILEPATH=d:/var/rtti/maitenancemonitor/data
+PUBLISHDATA_FILEPATH=d:/var/rtti/fusionpublish
 #alarm set up
-mail_server=mail.ctfo.com
-mail_user=zhouhuabin
-mail_password=790925
-mail_fromAddress=zhouhuabin@ctfo.com
-mail_receivers=
-sms_receivers=
+mail_server=smtp.ym.163.com
+mail_user=sender@palmcity.cn
+mail_password=pamc123
+mail_fromAddress=sender@palmcity.cn
+
+
+
+mail_receivers=fengmingliang@ctfo.com
+sms_receivers=13520813561
+
 
 #dataSource
 db_driverClass=org.sqlite.JDBC
-db_jdbcUrl=jdbc:sqlite:main.db
+db_jdbcUrl=jdbc:sqlite:D:/var/rtti/database/monitor.db
 db_user=default
 db_password=000
