--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,5 @@
 #log4j.rootLogger=debug,info,console,R
-#log4j.logger.com.palmcity.rtti.ic.fusion.log.TestLog=info,console,R
-log4j.logger.com.caits.lbs.framework.log.CommonLogFactory=info,console,R
+log4j.logger.com.caits.lbs.framework.log.CommonLogFactory=warn,console,R
 log4j.logger.errordatafile=error,errordatafile
 # \u5199\u5165\u63A7\u5236\u53F0.
 log4j.appender.console=org.apache.log4j.ConsoleAppender 
