--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -28,6 +28,6 @@ sms_receivers=13520813561
 
 #dataSource
 db_driverClass=org.sqlite.JDBC
-db_jdbcUrl=jdbc:sqlite:D:/var/rtti/database/monitor.db
+db_jdbcUrl=jdbc:sqlite:monitor.db
 db_user=default
 db_password=000
